--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ theme: jekyll-theme-cayman
 
 remote_theme: pages-themes/cayman@v0.2.0
 
-github:
-  is_project_page: false
+# github:
+#   is_project_page: false
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
